<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginLeft="16dp"
    android:layout_marginRight="16dp"
    tools:context="com.rajubd49.bs195.myapplication.RelativeLayoutActivity">

    <EditText
        android:id="@+id/first_text_edit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/username"
        android:layout_marginTop="16dp"
        />
    <EditText
        android:id="@+id/second_text_edit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        android:layout_below="@+id/first_text_edit"
        />
    <Button
        android:id="@+id/login_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/second_text_edit"
        android:layout_alignParentRight="true"
        android:text="@string/login"
        android:onClick="loginButtonClicked"
        />
    <Button
        android:id="@+id/signup_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/login_button"
        android:text="@string/signup"
        android:layout_centerHorizontal="true"
        />
    <ImageView
        android:id="@+id/image_view"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:src="@drawable/cake"
        android:layout_below="@+id/signup_button"
        android:layout_marginTop="32dp"
        android:scaleType="centerCrop"
        />
    <TextView
        android:id="@+id/first_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@id/image_view"
        android:layout_alignTop="@id/image_view"
        android:layout_marginLeft="8dp"
        android:text="@string/text_one"
        android:textAppearance="?android:textAppearanceMedium"
        />
    <TextView
        android:id="@+id/second_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@id/image_view"
        android:layout_below="@id/first_text_view"
        android:layout_marginLeft="8dp"
        android:text="@string/text_two"
        android:textAppearance="?android:textAppearanceSmall"
        />
    <TextView
        android:id="@+id/third_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@id/image_view"
        android:layout_below="@id/second_text_view"
        android:layout_marginLeft="8dp"
        android:text="@string/text_three"
        android:textAppearance="?android:textAppearanceSmall"
        />

        <ProgressBar
            android:id="@+id/progress_bar"
            style="@style/Widget.AppCompat.ProgressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:visibility="gone">

        </ProgressBar>
</RelativeLayout>
